--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "@types/next": "^6.1.4",
     "@types/react": "^16.4.13",
     "@types/react-dom": "^16.0.7",
-    "prettier": "^1.14.2"
+    "prettier": "^1.14.2",
+    "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.15.0",
+    "tslint-react": "^3.6.0",
+    "typescript": "^3.1.1"
   }
 }
