--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "@zeit/next-typescript": "^1.1.1",
+    "geolib": "^2.0.24",
     "google-map-react": "^1.0.9",
     "next": "^7.0.1",
     "react": "^16.5.2",
